lexical_syntax/syntax.output
Terminals unused in grammar

   LOWER_THAN_RB


State 27 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier ExtDecList error
    9       | Specifier ExtDecList error SEMI
   10       | Specifier error
   11       | Specifier error SEMI

   12 ExtDecList: VarDec
   13           | VarDec COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT OptTag LC DefList error

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB INT error RB
   25       | VarDec LB error RB

   26 FunDec: ID LP VarList RP
   27       | ID LP RP
   28       | ID LP error RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec

   31 ParamDec: Specifier VarDec

   32 CompSt: LC DefList StmtList RC
   33       | LC error RC
   34       | LC error

   35 StmtList: Stmt StmtList
   36         | %empty

   37 Stmt: Exp SEMI
   38     | CompSt
   39     | RETURN Exp SEMI
   40     | IF LP Exp RP Stmt
   41     | IF LP Exp RP Stmt ELSE Stmt
   42     | WHILE LP Exp RP Stmt
   43     | Exp error
   44     | RETURN Exp error
   45     | error SEMI
   46     | error RP

   47 DefList: Def DefList
   48        | %empty

   49 Def: Specifier DecList SEMI
   50    | Specifier DecList error
   51    | Specifier DecList error SEMI

   52 DecList: Dec
   53        | Dec COMMA DecList

   54 Dec: VarDec
   55    | VarDec ASSIGNOP Exp

   56 Exp: Exp ASSIGNOP Exp
   57    | Exp AND Exp
   58    | Exp OR Exp
   59    | Exp RELOP Exp
   60    | Exp PLUS Exp
   61    | Exp MINUS Exp
   62    | Exp STAR Exp
   63    | Exp DIV Exp
   64    | LP Exp RP
   65    | MINUS Exp
   66    | NOT Exp
   67    | ID LP Args RP
   68    | ID LP RP
   69    | Exp LB Exp RB
   70    | Exp DOT ID
   71    | ID
   72    | INT
   73    | FLOAT
   74    | ID LP Args error RP
   75    | ID LP error RP
   76    | Exp LB Exp error
   77    | LP Exp error RP

   78 Args: Exp COMMA Args
   79     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 10 11 18 24 25 28 33 34 43 44 45 46 50 51 74 75 76
    77
INT (258) 23 24 72
FLOAT (259) 73
ID (260) 19 21 22 26 27 28 67 68 70 71 74 75
SEMI (261) 4 5 7 9 11 37 39 45 49 51
COMMA (262) 13 29 53 78
ASSIGNOP (263) 55 56
RELOP (264) 59
PLUS (265) 60
MINUS (266) 61 65
STAR (267) 62
DIV (268) 63
OR (269) 58
AND (270) 57
DOT (271) 70
NOT (272) 66
TYPE (273) 14
LP (274) 26 27 28 40 41 42 64 67 68 74 75 77
RP (275) 26 27 28 40 41 42 46 64 67 68 74 75 77
LB (276) 23 24 25 69 76
RB (277) 23 24 25 69
LC (278) 16 18 32 33 34
RC (279) 16 32 33
STRUCT (280) 16 17 18
RETURN (281) 39 44
IF (282) 40 41
ELSE (283) 41
WHILE (284) 42
LOWER_THAN_ELSE (285)
LOWER_THAN_SEMI (286)
LOWER_THAN_RC (287)
LOWER_THAN_RB (288)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
ExtDefList (36)
    on left: 2 3, on right: 1 2
ExtDef (37)
    on left: 4 5 6 7 8 9 10 11, on right: 2
ExtDecList (38)
    on left: 12 13, on right: 4 8 9 13
Specifier (39)
    on left: 14 15, on right: 4 5 6 7 8 9 10 11 31 49 50 51
StructSpecifier (40)
    on left: 16 17 18, on right: 15
OptTag (41)
    on left: 19 20, on right: 16 18
Tag (42)
    on left: 21, on right: 17
VarDec (43)
    on left: 22 23 24 25, on right: 12 13 23 24 25 31 54 55
FunDec (44)
    on left: 26 27 28, on right: 6 7
VarList (45)
    on left: 29 30, on right: 26 29
ParamDec (46)
    on left: 31, on right: 29 30
CompSt (47)
    on left: 32 33 34, on right: 6 38
StmtList (48)
    on left: 35 36, on right: 32 35
Stmt (49)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 35 40 41 42
DefList (50)
    on left: 47 48, on right: 16 18 32 47
Def (51)
    on left: 49 50 51, on right: 47
DecList (52)
    on left: 52 53, on right: 49 50 51 53
Dec (53)
    on left: 54 55, on right: 52 53
Exp (54)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77, on right: 37 39 40 41 42 43 44 55 56 57 58 59 60 61
    62 63 64 65 66 69 70 76 77 78 79
Args (55)
    on left: 78 79, on right: 67 74 78


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


State 2

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag
   18                | STRUCT . OptTag LC DefList error

    ID  shift, and go to state 8

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . ExtDecList error
    9       | Specifier . ExtDecList error SEMI
   10       | Specifier . error
   11       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


State 8

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 9

   16 StructSpecifier: STRUCT OptTag . LC DefList RC
   18                | STRUCT OptTag . LC DefList error

    LC  shift, and go to state 19


State 10

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   10 ExtDef: Specifier error .
   11       | Specifier error . SEMI

    SEMI  shift, and go to state 20

    $default  reduce using rule 10 (ExtDef)


State 14

   22 VarDec: ID .
   26 FunDec: ID . LP VarList RP
   27       | ID . LP RP
   28       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 22 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error
    9       | Specifier ExtDecList . error SEMI

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 17

   12 ExtDecList: VarDec .
   13           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB INT error RB
   25       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 12 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 26
    LC    shift, and go to state 27

    CompSt  go to state 28


State 19

   16 StructSpecifier: STRUCT OptTag LC . DefList RC
   18                | STRUCT OptTag LC . DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

   11 ExtDef: Specifier error SEMI .

    $default  reduce using rule 11 (ExtDef)


State 21

   26 FunDec: ID LP . VarList RP
   27       | ID LP . RP
   28       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 35
    ParamDec         go to state 36


State 22

    8 ExtDef: Specifier ExtDecList error .
    9       | Specifier ExtDecList error . SEMI

    SEMI  shift, and go to state 37

    $default  reduce using rule 8 (ExtDef)


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   13 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 17


State 25

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . INT error RB
   25       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 26

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 27

   32 CompSt: LC . DefList StmtList RC
   33       | LC . error RC
   34       | LC . error

    error   shift, and go to state 42
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 48 (DefList)]
    INT     reduce using rule 48 (DefList)
    FLOAT   reduce using rule 48 (DefList)
    ID      reduce using rule 48 (DefList)
    MINUS   reduce using rule 48 (DefList)
    NOT     reduce using rule 48 (DefList)
    LP      reduce using rule 48 (DefList)
    LC      reduce using rule 48 (DefList)
    RC      reduce using rule 48 (DefList)
    RETURN  reduce using rule 48 (DefList)
    IF      reduce using rule 48 (DefList)
    WHILE   reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   49 Def: Specifier . DecList SEMI
   50    | Specifier . DecList error
   51    | Specifier . DecList error SEMI

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 30

   16 StructSpecifier: STRUCT OptTag LC DefList . RC
   18                | STRUCT OptTag LC DefList . error

    error  shift, and go to state 47
    RC     shift, and go to state 48


State 31

   47 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 48 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 49
    Def              go to state 31


State 32

   28 FunDec: ID LP error . RP

    RP  shift, and go to state 50


State 33

   27 FunDec: ID LP RP .

    $default  reduce using rule 27 (FunDec)


State 34

   31 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 51


State 35

   26 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 36

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 30 (VarList)


State 37

    9 ExtDef: Specifier ExtDecList error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 38

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 39

   13 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 13 (ExtDecList)


State 40

   25 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 41

   23 VarDec: VarDec LB INT . RB
   24       | VarDec LB INT . error RB

    error  shift, and go to state 55
    RB     shift, and go to state 56


State 42

   33 CompSt: LC error . RC
   34       | LC error .

    RC  shift, and go to state 57

    $default  reduce using rule 34 (CompSt)


State 43

   32 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 27
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 44

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB INT error RB
   25       | VarDec . LB error RB
   54 Dec: VarDec .
   55    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 25

    $default  reduce using rule 54 (Dec)


State 45

   49 Def: Specifier DecList . SEMI
   50    | Specifier DecList . error
   51    | Specifier DecList . error SEMI

    error  shift, and go to state 73
    SEMI   shift, and go to state 74


State 46

   52 DecList: Dec .
   53        | Dec . COMMA DecList

    COMMA  shift, and go to state 75

    $default  reduce using rule 52 (DecList)


State 47

   18 StructSpecifier: STRUCT OptTag LC DefList error .

    $default  reduce using rule 18 (StructSpecifier)


State 48

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 49

   47 DefList: Def DefList .

    $default  reduce using rule 47 (DefList)


State 50

   28 FunDec: ID LP error RP .

    $default  reduce using rule 28 (FunDec)


State 51

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB INT error RB
   25       | VarDec . LB error RB
   31 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 31 (ParamDec)


State 52

   26 FunDec: ID LP VarList RP .

    $default  reduce using rule 26 (FunDec)


State 53

   29 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 34
    StructSpecifier  go to state 7
    VarList          go to state 76
    ParamDec         go to state 36


State 54

   25 VarDec: VarDec LB error RB .

    $default  reduce using rule 25 (VarDec)


State 55

   24 VarDec: VarDec LB INT error . RB

    RB  shift, and go to state 77


State 56

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 57

   33 CompSt: LC error RC .

    $default  reduce using rule 33 (CompSt)


State 58

   45 Stmt: error . SEMI
   46     | error . RP

    SEMI  shift, and go to state 78
    RP    shift, and go to state 79


State 59

   72 Exp: INT .

    $default  reduce using rule 72 (Exp)


State 60

   73 Exp: FLOAT .

    $default  reduce using rule 73 (Exp)


State 61

   67 Exp: ID . LP Args RP
   68    | ID . LP RP
   71    | ID .
   74    | ID . LP Args error RP
   75    | ID . LP error RP

    LP  shift, and go to state 80

    $default  reduce using rule 71 (Exp)


State 62

   65 Exp: MINUS . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


State 63

   66 Exp: NOT . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 82


State 64

   64 Exp: LP . Exp RP
   77    | LP . Exp error RP

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 83


State 65

   39 Stmt: RETURN . Exp SEMI
   44     | RETURN . Exp error

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 84


State 66

   40 Stmt: IF . LP Exp RP Stmt
   41     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 85


State 67

   42 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 86


State 68

   38 Stmt: CompSt .

    $default  reduce using rule 38 (Stmt)


State 69

   32 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


State 70

   35 StmtList: Stmt . StmtList

    error   shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    ID      shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 27
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67

    RC  reduce using rule 36 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 88
    Stmt      go to state 70
    Exp       go to state 71


State 71

   37 Stmt: Exp . SEMI
   43     | Exp . error
   56 Exp: Exp . ASSIGNOP Exp
   57    | Exp . AND Exp
   58    | Exp . OR Exp
   59    | Exp . RELOP Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   69    | Exp . LB Exp RB
   70    | Exp . DOT ID
   76    | Exp . LB Exp error

    error     shift, and go to state 89
    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    OR        shift, and go to state 97
    AND       shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100


State 72

   55 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 101


State 73

   50 Def: Specifier DecList error .
   51    | Specifier DecList error . SEMI

    SEMI  shift, and go to state 102

    $default  reduce using rule 50 (Def)


State 74

   49 Def: Specifier DecList SEMI .

    $default  reduce using rule 49 (Def)


State 75

   53 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 103
    Dec      go to state 46


State 76

   29 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 29 (VarList)


State 77

   24 VarDec: VarDec LB INT error RB .

    $default  reduce using rule 24 (VarDec)


State 78

   45 Stmt: error SEMI .

    $default  reduce using rule 45 (Stmt)


State 79

   46 Stmt: error RP .

    $default  reduce using rule 46 (Stmt)


State 80

   67 Exp: ID LP . Args RP
   68    | ID LP . RP
   74    | ID LP . Args error RP
   75    | ID LP . error RP

    error  shift, and go to state 104
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    ID     shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    RP     shift, and go to state 105

    Exp   go to state 106
    Args  go to state 107


State 81

   56 Exp: Exp . ASSIGNOP Exp
   57    | Exp . AND Exp
   58    | Exp . OR Exp
   59    | Exp . RELOP Exp
   60    | Exp . PLUS Exp
   61    | Exp . MINUS Exp
   62    | Exp . STAR Exp
   63    | Exp . DIV Exp
   65    | MINUS Exp .
   69    | Exp . LB Exp RB
   70    | Exp . DOT ID
   76    | Exp . LB Exp error

    RELOP  shift, and go to state 92
    STAR   shift, and go to state 95
    DIV    shift, and go to state 96
    OR     shift, and go to state 97
    AND    shift, and go to state 98
    DOT    shift, and go to state 99
    LB     shift, and go to state 100

    $default  reduce using rule 65 (Exp)


State 82
